# HandFXApp

./: .gitignore  features.py  gesture_sender.py  gesture_sender_twohands.py  test_camera.py  test_hands.py  test_osc_receiver.py  test_osc_sender.py
HandFX/: CMakeLists.txt
HandFX/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
